# GeneticAlgorithm

./: App.cpp  App.h  CMakeLists.txt  Menu.cpp  Menu.h  README.md
algorithms/: GeneticAlgorithm.cpp  GeneticAlgorithm.h
